--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -664,8 +664,32 @@ input[type='text']:focus, input[type='password']:focus{
 }
 
 .ui-datepicker {
+	width: auto !important;
 	z-index: 1000 !important;
+	box-shadow: #515151 1px 2px 7px;
 }
+
+.ui-datepicker-calendar .ui-state-default{
+	color: #25B6CC !important;
+}
+
+.ui-datepicker-calendar .ui-state-active{
+	color: #4F4F4F !important;
+}
+
+.ui-datepicker-calendar .ui-state-hover{
+	color: #fff !important;
+	background: #10A3BA !important;
+	border: 1px #ddd solid !important;
+}
+
+.ui-datepicker-calendar .ui-state-highlight{
+	border: 1px #ddd solid !important;
+	/*min-height: 70px;*/
+	color: #fff !important;
+	background: #25B6CC; 
+}
+
 /*
 .ui-datepicker{ background-color: #000; box-shadow:#999 0 5px 10px; color: #fff; }
 .ui-datepicker table{ border:0; background-color:#fff; border:1px solid #bbb; }
@@ -698,7 +722,7 @@ input[type='text']:focus, input[type='password']:focus{
 .ui-state-highlight{
 	margin: 5px 0; 
 	padding: 0; 
-	min-height: 70px; 
+	/*min-height: 70px; */
 	background: #f2fbff !important; 
 	/*border: 1px dashed #b6bcbf !important;*/
 }
